packages/speech_utils/lib/src/generated/vad/ten_vad_bindings.dart

// ignore_for_file: camel_case_types

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:speech_utils/src/generated/vad/ten_vad_bindings.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Int Function(ffi.Pointer<ten_vad_handle_t>, ffi.UnsignedLongLong, ffi.Float)>()
external int ten_vad_create(ffi.Pointer<ten_vad_handle_t> handle, int hop_size, double threshold);

@ffi.Native<
  ffi.Int Function(
    ten_vad_handle_t,
    ffi.Pointer<ffi.Short>,
    ffi.UnsignedLongLong,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
  )
>()
external int ten_vad_process(
  ten_vad_handle_t handle,
  ffi.Pointer<ffi.Short> audio_data,
  int audio_data_length,
  ffi.Pointer<ffi.Float> out_probability,
  ffi.Pointer<ffi.Int> out_flag,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ten_vad_handle_t>)>()
external int ten_vad_destroy(ffi.Pointer<ten_vad_handle_t> handle);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> ten_vad_get_version();

typedef ten_vad_handle_t = ffi.Pointer<ffi.Void>;
